# custom-search-FuexFollets

./: main.py  pyproject.toml
static/: script.js  style.css  ＊mcdonalds noises＊ [8uCEtLPfxZE].webm
templates/: index.html
